--- a/sneha-portfolio/src/index.css
+++ b/sneha-portfolio/src/index.css
@@ -1,9 +1,8 @@
-/* src/styles/index.css */
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-/* Font Imports */
+/* Custom Fonts */
 @font-face {
   font-family: 'BROGETTA';
   src: url('./assets/fonts/BROGETTA-Regular.otf') format('opentype');
