--- a/sneha-portfolio/src/index.css
+++ b/sneha-portfolio/src/index.css
@@ -1,8 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/* src/styles/index.css */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
-/* Custom Fonts */
+/* Font Imports */
 @font-face {
   font-family: 'BROGETTA';
   src: url('./assets/fonts/BROGETTA-Regular.otf') format('opentype');
